--- a/company-info-service/src/main/resources/application.yml
+++ b/company-info-service/src/main/resources/application.yml
@@ -1,3 +1,11 @@
+spring:
+  data:
+    redis:
+      host: localhost
+      port: 6379
+    cache:
+      type: redis
+
 polygon:
   api:
     key: V4_aPjfLf3uRm1v8EO3SRFvJfOM4WtDp
