--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -4,5 +4,13 @@ server:
 spring:
   cloud:
     gateway:
-      mvc:
-        routes: 
+      routes:
+        - id: company-service
+          uri: http://localhost:8081
+          predicates:
+            - Path=/api/companies/**
+
+        - id: news-service
+          uri: http://localhost:8082
+          predicates:
+            - Path=/api/news/**
