--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -14,3 +14,13 @@ spring:
           uri: http://localhost:8082
           predicates:
             - Path=/api/news/**
+
+        - id: currency-service
+          uri: http://localhost:8083
+          predicates:
+            - Path=/api/currency/**
+
+        - id: historical-analytics-service
+          uri: http://localhost:8084
+          predicates:
+            - Path=/api/historical/**
