added docker + docker-compose

--- a/currency-service/build.gradle
+++ b/currency-service/build.gradle
@@ -13,6 +13,10 @@ java {
     }
 }
 
+bootJar {
+    archiveFileName = 'currency-service.jar'
+}
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
