--- a/company-info-service/build.gradle
+++ b/company-info-service/build.gradle
@@ -13,6 +13,10 @@ java {
     }
 }
 
+bootJar {
+    archiveFileName = 'company-info-service.jar'
+}
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
