--- a/company-info-service/build.gradle
+++ b/company-info-service/build.gradle
@@ -27,6 +27,10 @@ repositories {
     mavenCentral()
 }
 
+bootJar {
+    archiveFileName = 'company-info-service.jar'
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
