--- a/news-service/build.gradle
+++ b/news-service/build.gradle
@@ -27,6 +27,10 @@ repositories {
     mavenCentral()
 }
 
+bootJar {
+    archiveFileName = 'news-service.jar'
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
