add redis to docker-compose

--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -13,6 +13,10 @@ java {
     }
 }
 
+bootJar {
+    archiveFileName = 'api-gateway.jar'
+}
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
