--- a/currency-service/src/main/resources/application.yml
+++ b/currency-service/src/main/resources/application.yml
@@ -4,3 +4,11 @@ freecurrency:
 server:
   port: 8080
   address: 0.0.0.0
+
+spring:
+  data:
+    redis:
+      host: redis
+      port: 6379
+    cache:
+      type: redis
