--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,25 +12,31 @@ services:
       - currency-service
       - historical-analytics-service
 
+  redis:
+    image: redis:7-alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+
   company-info-service:
       build: ./company-info-service
       ports:
-        - "8081:8081"
+        - "8081:8080"
 
   news-service:
       build: ./news-service
       ports:
-        - "8082:8082"
+        - "8082:8080"
 
   currency-service:
       build: ./currency-service
       ports:
-        - "8083:8083"
+        - "8083:8080"
 
   historical-analytics-service:
       build: ./historical-analytics-service
       ports:
-        - "8084:8084"
+        - "8084:8080"
 
   prometheus:
     image: prom/prometheus
