--- a/company-info-service/build.gradle
+++ b/company-info-service/build.gradle
@@ -44,6 +44,9 @@ dependencies {
     implementation 'redis.clients:jedis'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'io.micrometer:micrometer-registry-prometheus'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'org.postgresql:postgresql'
 }
 
 tasks.named('test') {
