--- a/company-info-service/src/main/resources/application.yml
+++ b/company-info-service/src/main/resources/application.yml
@@ -3,8 +3,11 @@ spring:
     redis:
       host: redis
       port: 6379
-    cache:
-      type: redis
+  cache:
+    type: redis
+    redis:
+      time-to-live: 600000
+
 
 server:
   port: 8080
