--- a/stocks_service/src/main/resources/application.yml
+++ b/stocks_service/src/main/resources/application.yml
@@ -1,3 +1,17 @@
 polygon:
   api:
     key: ${POLYGON_API_KEY}
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, prometheus
+  metrics:
+    distribution:
+      percentiles-histogram:
+        "[http.server.requests]": true
+  prometheus:
+    metrics:
+      export:
+        enabled: true
