--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,8 @@ services:
     build: ./stocks_service
     ports:
       - "8085:8080"
+    environment:
+      - ${POLYGON_API_KEY}
 
   grafana:
     image: grafana/grafana
