--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - news-service
       - currency-service
       - historical-analytics-service
+      - stocks-service
 
   redis:
     image: redis:7-alpine
@@ -38,6 +39,13 @@ services:
       ports:
         - "8084:8080"
 
+  stocks-service:
+    build: ./stocks_service
+    ports:
+      - "8085:8080"
+    environment:
+      - POLYGON_API_KEY=V4_aPjfLf3uRm1v8EO3SRFvJfOM4WtDp
+
   prometheus:
     image: prom/prometheus
     container_name: prometheus
@@ -48,13 +56,6 @@ services:
     restart: unless-stopped
     networks:
       - monitoring
-
-  stocks-service:
-    build: ./stocks_service
-    ports:
-      - "8085:8080"
-    environment:
-      - ${POLYGON_API_KEY}
 
   grafana:
     image: grafana/grafana
