--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
         - "8084:8080"
 
   stocks-service:
-    build: ./stocks_service
+    build: ./stocks-service
     ports:
       - "8085:8080"
     environment:
