--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -29,3 +29,12 @@ spring:
           uri: http://stocks-service:8080
           predicates:
             - Path=/api/stocks/**
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  endpoint:
+    gateway:
+      enabled: true
