--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,17 @@ version: '3.8'
 
 services:
 
+  postgres:
+    image: postgres:16
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: company_info_db
+    ports:
+      - "5432:5432"
+
+
   api-gateway:
     build: ./api-gateway
     ports:
@@ -21,6 +32,15 @@ services:
 
   company-info-service:
       build: ./company-info-service
+      environment:
+        SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/company_info_db
+        SPRING_DATASOURCE_USERNAME: postgres
+        SPRING_DATASOURCE_PASSWORD: postgres
+        POLYGON_API_KEY: V4_aPjfLf3uRm1v8EO3SRFvJfOM4WtDp
+        SPRING_REDIS_HOST: redis
+        SPRING_REDIS_PORT: 6379
+      depends_on:
+          - postgres
       ports:
         - "8081:8080"
 
