--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
 
-  postgres:
+  company-db:
     image: postgres:16
     restart: always
     environment:
@@ -11,6 +11,18 @@ services:
       POSTGRES_DB: company_info_db
     ports:
       - "5432:5432"
+    networks:
+      - stocknet
+
+  news-db:
+    image: postgres:16
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: news_db
+    ports:
+      - "5433:5432"
     networks:
       - stocknet
 
@@ -47,14 +59,14 @@ services:
   company-info-service:
       build: ./company-info-service
       environment:
-        SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/company_info_db
+        SPRING_DATASOURCE_URL: jdbc:postgresql://company-db:5432/company_info_db
         SPRING_DATASOURCE_USERNAME: postgres
         SPRING_DATASOURCE_PASSWORD: postgres
         POLYGON_API_KEY: V4_aPjfLf3uRm1v8EO3SRFvJfOM4WtDp
         SPRING_REDIS_HOST: redis
         SPRING_REDIS_PORT: 6379
       depends_on:
-          - postgres
+          - company-db
       ports:
         - "8081:8080"
       networks:
@@ -62,6 +74,13 @@ services:
 
   news-service:
       build: ./news-service
+      environment:
+        SPRING_DATASOURCE_URL: jdbc:postgresql://news-db:5432/news_db
+        SPRING_DATASOURCE_USERNAME: postgres
+        SPRING_DATASOURCE_PASSWORD: postgres
+        POLYGON_API_KEY: V4_aPjfLf3uRm1v8EO3SRFvJfOM4WtDp
+      depends_on:
+        - news-db
       ports:
         - "8082:8080"
       networks:
