--- a/company-info-service/src/main/resources/application.yml
+++ b/company-info-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/company_info_db
+    url: jdbc:postgresql://company-db:5432/company_info_db
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
