--- a/historical-analytics-service/src/main/resources/application.yml
+++ b/historical-analytics-service/src/main/resources/application.yml
@@ -7,6 +7,28 @@ server:
   address: 0.0.0.0
 
 spring:
+  datasource:
+    url: jdbc:postgresql://historical-db:5432/historical_db
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, prometheus
+  metrics:
+    distribution:
+      percentiles-histogram:
+        "[http.server.requests]": true
+  prometheus:
+    metrics:
+      export:
+        enabled: true
