--- a/stocks-service/build.gradle
+++ b/stocks-service/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'io.micrometer:micrometer-registry-prometheus'
+    implementation 'org.springframework.boot:spring-boot-starter'
 }
 
 tasks.named('test') {
