--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -132,7 +132,7 @@ services:
       ports:
         - "8085:8080"
       environment:
-        - POLYGON_API_KEY=${POLYGON_API_KEY}
+        POLYGON_API_KEY: V4_aPjfLf3uRm1v8EO3SRFvJfOM4WtDp
       networks:
         - stocknet
 
