--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,7 +1,9 @@
-FROM eclipse-temurin:17-jdk
-
+FROM gradle:8.5-jdk17-alpine AS build
 WORKDIR /app
+COPY . .
+RUN gradle clean build --no-daemon
 
+FROM eclipse-temurin:17-jdk
+WORKDIR /app
 COPY build/libs/api-gateway.jar app.jar
-
 ENTRYPOINT ["java", "-jar", "app.jar"]
