--- a/currency-service/Dockerfile
+++ b/currency-service/Dockerfile
@@ -5,5 +5,5 @@ RUN gradle clean build --no-daemon
 
 FROM eclipse-temurin:17-jdk
 WORKDIR /app
-COPY build/libs/currency-service.jar app.jar
+COPY --from=build /app/build/libs/currency-service.jar app.jar
 ENTRYPOINT ["java", "-jar", "app.jar"]
