--- a/stocks-service/build.gradle
+++ b/stocks-service/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'io.micrometer:micrometer-registry-prometheus'
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.json:json:20240303'
 }
 
 tasks.named('test') {
