--- a/currency-service/src/main/resources/application.yml
+++ b/currency-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ server:
 spring:
   data:
     redis:
-      host: redis
+      host: currency-redis
       port: 6379
     cache:
       type: redis
