--- a/company-info-service/src/main/resources/application.yml
+++ b/company-info-service/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
   data:
     redis:
-      host: redis
+      host: company-redis
       port: 6379
 
 server:
