--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -40,6 +40,11 @@ spring:
           predicates:
           - Path=/ws/stocks/**
 
+        - id: notification-service
+          uri: http://notification-service:8080
+          predicates:
+              - Path=/api/notifications/**
+
 management:
   endpoints:
     web:
