--- a/notification-service/build.gradle
+++ b/notification-service/build.gradle
@@ -23,6 +23,10 @@ repositories {
     mavenCentral()
 }
 
+bootJar {
+    archiveFileName = 'notification-service.jar'
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
