--- a/company-info-service/build.gradle
+++ b/company-info-service/build.gradle
@@ -29,13 +29,11 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'io.projectreactor:reactor-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'redis.clients:jedis'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
@@ -43,6 +41,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'org.postgresql:postgresql'
+    implementation 'io.github.resilience4j:resilience4j-spring-boot3'
+    implementation "org.springframework.boot:spring-boot-starter-aop"
+    implementation platform("io.github.resilience4j:resilience4j-bom:2.2.0")
+    implementation 'org.apache.httpcomponents.client5:httpclient5'
 }
 
 tasks.named('test') {
