--- a/historical-analytics-service/src/main/resources/application.yml
+++ b/historical-analytics-service/src/main/resources/application.yml
@@ -3,11 +3,16 @@ polygon:
     key: ${POLYGON_API_KEY}
 
 server:
+  tomcat:
+    mbeanregistry:
+      enabled: true
   port: 8080
   address: 0.0.0.0
 
 spring:
-#  datasource:
+  application:
+    name: historical-service
+  #  datasource:
 #    url: jdbc:postgresql://historical-db:5432/historical_db
 #    username: postgres
 #    password: postgres
@@ -19,15 +24,23 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
 management:
   endpoints:
     web:
       exposure:
-        include: health, prometheus
+        include: health, info, metrics, prometheus
+  endpoint:
+    health:
+      show-details: always
   metrics:
     distribution:
       percentiles-histogram:
-        "[http.server.requests]": true
+        http.server.requests: true
+      slo:
+        "[http.server.requests]": 25ms,50ms,100ms,200ms,400ms,800ms
+    tags:
+      application: ${spring.application.name}
   prometheus:
     metrics:
       export:
