--- a/stocks-service/src/main/resources/application.yml
+++ b/stocks-service/src/main/resources/application.yml
@@ -6,17 +6,27 @@ management:
   endpoints:
     web:
       exposure:
-        include: health, prometheus
+        include: health, info, metrics, prometheus
+  endpoint:
+    health:
+      show-details: always
   metrics:
     distribution:
       percentiles-histogram:
-        "[http.server.requests]": true
+        http.server.requests: true
+      slo:
+        "[http.server.requests]": 25ms,50ms,100ms,200ms,400ms,800ms
+    tags:
+      application: ${spring.application.name}
   prometheus:
     metrics:
       export:
         enabled: true
 
 server:
+  tomcat:
+    mbeanregistry:
+      enabled: true
   port: 8080
   address: 0.0.0.0
 
@@ -27,3 +37,6 @@ springdoc:
     path: /swagger
     operationsSorter: method
     tagsSorter: alpha
+spring:
+  application:
+    name: stocks-service
