--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,7 +1,12 @@
 server:
+  tomcat:
+    mbeanregistry:
+      enabled: true
   port: 8080
 
 spring:
+  application:
+    name: api-gateway
   cloud:
     gateway:
       routes:
@@ -77,10 +82,18 @@ management:
   endpoints:
     web:
       exposure:
-        include: '*'
+        include: health, info, metrics, prometheus
   endpoint:
-    gateway:
-      enabled: true
+    health:
+      show-details: always
+  metrics:
+    distribution:
+      percentiles-histogram:
+        http.server.requests: true
+      slo:
+        "[http.server.requests]": 25ms,50ms,100ms,200ms,400ms,800ms
+    tags:
+      application: ${spring.application.name}
 
 springdoc:
   swagger-ui:
