--- a/company-info-service/build.gradle
+++ b/company-info-service/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation platform("io.github.resilience4j:resilience4j-bom:2.2.0")
     implementation 'org.apache.httpcomponents.client5:httpclient5'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.11'
+    implementation 'org.mapstruct:mapstruct:1.6.0'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.0'
 }
 
 tasks.named('test') {
