--- a/currency-service/src/main/resources/application.yml
+++ b/currency-service/src/main/resources/application.yml
@@ -3,10 +3,15 @@ freecurrency:
     key: fca_live_hs0yPrOObSsKEWaBJoMXsAeK398j4L9L5pl84AY1
 
 server:
+  tomcat:
+    mbeanregistry:
+      enabled: true
   port: 8080
   address: 0.0.0.0
 
 spring:
+  application:
+    name: currency-service
   data:
     redis:
       host: currency-redis
@@ -61,3 +66,24 @@ springdoc:
     path: /swagger
     operationsSorter: method
     tagsSorter: alpha
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info, metrics, prometheus
+  endpoint:
+    health:
+      show-details: always
+  metrics:
+    distribution:
+      percentiles-histogram:
+        http.server.requests: true
+      slo:
+        "[http.server.requests]": 25ms,50ms,100ms,200ms,400ms,800ms
+    tags:
+      application: ${spring.application.name}
+  prometheus:
+    metrics:
+      export:
+        enabled: true
