--- a/news-service/src/main/resources/application.yml
+++ b/news-service/src/main/resources/application.yml
@@ -24,6 +24,8 @@ spring:
       hibernate:
         format_sql: true
     open-in-view: false
+  application:
+    name: news-service
 
 logging:
   level:
@@ -33,6 +35,8 @@ server:
   port: 8080
   address: 0.0.0.0
   tomcat:
+    mbeanregistry:
+      enabled: true
     threads:
       max: 100
 
@@ -44,7 +48,7 @@ resilience4j:
         sliding-window-type: TIME_BASED
         sliding-window-size: 30
         minimum-number-of-calls: 10
-        slow-call-duration-threshold: 1s
+        slow-call-duration-threshold: 2s
         slow-call-rate-threshold: 60
         failure-rate-threshold: 50
         wait-duration-in-open-state: 10s
@@ -59,8 +63,8 @@ resilience4j:
   retry:
     instances:
       readSafe:
-        max-attempts: 3
-        wait-duration: 100ms
+        max-attempts: 1
+        wait-duration: 1ms
         enable-exponential-backoff: true
         retry-exceptions:
           - java.net.SocketTimeoutException
@@ -72,13 +76,11 @@ resilience4j:
   bulkhead:
     instances:
       newsRead:
-        max-concurrent-calls: 16
-        max-wait-duration:
-          seconds: 0
+        max-concurrent-calls: 32
+        max-wait-duration: 0ms
       newsFetch:
-        max-concurrent-calls: 4
-        max-wait-duration:
-          seconds: 0
+        max-concurrent-calls: 20
+        max-wait-duration: 0ms
 
 
 
@@ -90,20 +92,22 @@ management:
   endpoints:
     web:
       exposure:
-        include: health, prometheus, metrics, info
+        include: health, info, metrics, prometheus
+  endpoint:
+    health:
+      show-details: always
   metrics:
     distribution:
       percentiles-histogram:
-        "[http.server.requests]": true
+        http.server.requests: true
+      slo:
+        "[http.server.requests]": 25ms,50ms,100ms,200ms,400ms,800ms
+    tags:
+      application: ${spring.application.name}
   prometheus:
     metrics:
       export:
         enabled: true
-  endpoint:
-    health:
-      probes:
-        enabled: true
-      show-details: when_authorized
 
 springdoc:
   api-docs:
