--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -1,7 +1,12 @@
 server:
+  tomcat:
+    mbeanregistry:
+      enabled: true
   port: 8080
 
 spring:
+  application:
+    name: notification-service
   datasource:
     url: jdbc:postgresql://notification-db:5432/notification_db
     username: postgres
@@ -22,3 +27,24 @@ springdoc:
     path: /swagger
     operationsSorter: method
     tagsSorter: alpha
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info, metrics, prometheus
+  endpoint:
+    health:
+      show-details: always
+  metrics:
+    distribution:
+      percentiles-histogram:
+        http.server.requests: true
+      slo:
+        "[http.server.requests]": 25ms,50ms,100ms,200ms,400ms,800ms
+    tags:
+      application: ${spring.application.name}
+  prometheus:
+    metrics:
+      export:
+        enabled: true
