--- a/company-info-service/src/main/resources/application.yml
+++ b/company-info-service/src/main/resources/application.yml
@@ -1,14 +1,18 @@
+external:
+  polygon:
+    base-url: https://api.polygon.io
+
 spring:
   mvc:
     problemdetails:
       enabled: true
   application:
     name: company-info-service
-#  datasource:
-#    url: jdbc:postgresql://company-db:5432/company_info_db
-#    username: postgres
-#    password: postgres
-#    driver-class-name: org.postgresql.Driver
+  datasource:
+    url: jdbc:postgresql://company-db:5432/company_info_db
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
       ddl-auto: create
